Fixed navigation menu spacing

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ header {
   }
   
   .menu > div {
-    margin: 0 1rem;
+    margin-left: 1rem;
     overflow: hidden;
   }
 
